[INFER] Don't call learnType when property type is unknown, bug 654393. r=bhackett